--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.12.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net461" />
   <package id="Fody" version="4.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.VisualStudio.Utilities" version="16.1.28917.181" targetFramework="net461" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.0" targetFramework="net461" />
 </packages>
